--- a/src/style/style.css
+++ b/src/style/style.css
@@ -35,9 +35,12 @@ body {
 }
 
 body #app header {
-  -webkit-box-align: left;
-      -ms-flex-align: left;
-          align-items: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,7 +54,7 @@ body #app header {
 
 body #app header h1 {
   color: white;
-  font-size: 5rem;
+  font-size: 3.5rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-top: 3rem;
   margin-left: 4rem;
@@ -181,15 +184,15 @@ body #app main #api .item .extra {
   flex-direction: row;
   font-size: 3rem;
   border: 1px solid #eee;
-  margin: -0.1rem 1rem 0rem -21.3rem;
+  margin: -0.1rem 0rem 0rem -21.3rem;
   max-width: 60rem;
-  min-width: 23rem;
+  min-width: 25rem;
   min-height: 39rem;
-  max-height: 44rem;
+  max-height: 47rem;
   z-index: 2;
   display: flex;
   -ms-flex-direction: column;
-      flex-direction: column;
+  flex-direction: column;
   overflow: hidden;
 }
 
