--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -36,14 +36,15 @@ body{
     background-color: black;
     #app{
         header{
-            align-items: left;
+            align-items: center;
+            justify-content: baseline;
             display: flex;
             flex-direction: row;
             max-height: 10rem;
             max-width: 100%;
             h1{
                 color: white;
-                font-size:5rem;
+                font-size:3.5rem;
                 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 margin-top:3rem;
                 margin-left:4rem;
@@ -141,13 +142,14 @@ body{
                         flex-direction: row;
                         font-size: 3rem;
                         border: 1px solid #eee;
-                        margin: -0.1rem 1rem 0rem -21.3rem;
+                        margin: -0.1rem 0rem 0rem -21.3rem;
                         max-width: 60rem;
-                        min-width: 23rem;
+                        min-width: 25rem;
                         min-height: 39rem;
-                        max-height: 44rem;
+                        max-height: 47rem;
                         z-index: 2;
-                        display:flex;
+                        display: flex;
+                        -ms-flex-direction: column;
                         flex-direction: column;
                         overflow: hidden;
 
