--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 html{
@@ -37,7 +38,7 @@ body{
     #app{
         header{
             align-items: center;
-            justify-content: baseline;
+            justify-content: center;
             display: flex;
             flex-direction: row;
             max-height: 10rem;
@@ -120,38 +121,55 @@ body{
                     display: flex;
                     flex-direction:row;
                     font-size:3rem;
-                    border: 1px solid #eee;
                     margin: 1rem;
                     max-width: 60rem;
+                    min-width: 60rem;
                     min-height: 45rem;
                     max-height: 42rem;
 
-                    .title p{
-                        margin-top: 1.5rem;
-                        margin-bottom: 1.5rem;
+                    &::hover{
+                        border: 1px solid #eee;
                     }
 
+                    >div{
+                        flex-basis: 50%;
+                        min-width: 50%;
+                        max-width: 50%;
+                        >img{
+                        margin-bottom: 1.5rem;
+                        cursor: pointer;
+                        min-width: 90%;
+                        max-width: 90%;
+                        position: relative;
+                        top:50%;
+                        left: 50%;
+                        transform: translate(-50%,-50%) ;
+                        }
+                    } 
+                    
                     .extra{
                         background-color: orange;
-                        display: -webkit-box;
-                        display: -ms-flexbox;
-                        display: flex;
                         -webkit-box-orient: horizontal;
                         -webkit-box-direction: normal;
-                        -ms-flex-direction: row;
-                        flex-direction: row;
                         font-size: 3rem;
-                        border: 1px solid #eee;
-                        margin: -0.1rem 0rem 0rem -21.3rem;
-                        max-width: 60rem;
-                        min-width: 25rem;
-                        min-height: 39rem;
-                        max-height: 47rem;
+                        margin: -0.1rem 0rem 0rem -30rem;
+                        max-width: 50%;
+                        min-width: 50%;
+                        //min-height: 39rem;
+                        //max-height: 47rem;
                         z-index: 2;
-                        display: flex;
                         -ms-flex-direction: column;
                         flex-direction: column;
                         overflow: hidden;
+                        overflow-y: scroll;
+                        border-radius: 5%;
+                        animation-name: example;
+                        animation-duration: 1s;
+
+                        @keyframes example {
+                            from {transform: translate(10%); opacity: 0}
+                            to {transform: translate(0%); opacity: 1}
+                          }
 
                         p{                     
                         font-size: 2rem !important;
@@ -177,6 +195,7 @@ body{
                     .title{
                         margin-top:3rem;
                         margin-bottom: 3rem;
+                        flex-basis: 50%;
                         h1{
                             text-decoration: underline;
                             font-size: 2rem;
