--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,10 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@font-face {
+  font-family: "abnes";
+  src: url("../assets/abnes.eot"); /* IE9 Compat Modes */
+  src: url("../assets/abnes.eot?#iefix") format("embedded-opentype"), url("../assets/abnes.ttf") format("truetype");
+}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #fff;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: rgb(197, 164, 120);
+  font-family: math;
 }
 
 html {
@@ -31,20 +36,21 @@ a {
 }
 
 body {
-  background-color: black;
+  background-color: white;
 }
 body #app header {
   align-items: center;
   justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: row;
   max-height: 10rem;
   max-width: 100%;
 }
 body #app header h1 {
-  color: white;
+  color: rgb(197, 164, 120);
   font-size: 3.5rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "abnes";
   margin-top: 3rem;
   margin-left: 4rem;
   margin-bottom: 1rem;
@@ -61,10 +67,13 @@ body #app header .pageIndicator {
   margin-top: 2rem;
   font-family: "Courier New", Courier, monospace;
 }
+body #app header .pageIndicator > p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 body #app header .pageIndicator .fa-solid {
   font-size: 5rem;
   cursor: pointer;
-  color: white;
+  color: rgb(197, 164, 120);
   font-family: FontAwesome !important;
   font-style: normal;
   padding: 1.5rem;
@@ -75,18 +84,20 @@ body #app header .pageIndicator .pageNo {
 body #app header .search .wrap {
   margin-top: 3rem;
   margin-left: 1rem;
+  display: inline-flex;
 }
 body #app header .search input {
-  border: 3px solid yellow;
+  border: 3px solid rgb(197, 164, 120);
   border-top-left-radius: 3px;
   border-bottom-left-radius: 3px;
   height: 4rem;
   color: black;
+  font-size: 3rem;
 }
 body #app header .search button {
-  border: 3px solid yellow;
+  border: 3px solid rgb(197, 164, 120);
   margin-left: -0.3rem;
-  background-color: yellow;
+  background-color: rgb(197, 164, 120);
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
   height: 4rem;
@@ -94,7 +105,7 @@ body #app header .search button {
   cursor: pointer;
 }
 body #app .divider {
-  background-color: yellow;
+  background-color: rgb(197, 164, 120);
   min-width: 100%;
   min-height: 1.5rem;
 }
@@ -109,6 +120,7 @@ body #app main #api {
   flex-wrap: wrap;
   max-width: 80vw;
   margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 body #app main #api .item {
   display: flex;
@@ -119,6 +131,9 @@ body #app main #api .item {
   min-width: 60rem;
   min-height: 45rem;
   max-height: 42rem;
+  margin-right: 6rem;
+  border: double 0.5rem rgb(197, 164, 120);
+  outline: black 6px;
 }
 body #app main #api .item::hover {
   border: 1px solid #eee;
@@ -139,9 +154,9 @@ body #app main #api .item > div > img {
   transform: translate(-50%, -50%);
 }
 body #app main #api .item .extra {
-  background-color: orange;
+  background-color: rgb(143, 208, 202);
   font-size: 3rem;
-  margin: -0.1rem 0rem 0rem -30rem;
+  margin: -0.1rem 0rem 0rem -29.5rem;
   max-width: 50%;
   min-width: 50%;
   z-index: 2;
@@ -151,6 +166,20 @@ body #app main #api .item .extra {
   border-radius: 5%;
   animation-name: example;
   animation-duration: 1s;
+  /* width */
+  /* Track */
+  /* Handle */
+}
+body #app main #api .item .extra ::-webkit-scrollbar {
+  width: 20px;
+}
+body #app main #api .item .extra ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+body #app main #api .item .extra ::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
 }
 @keyframes example {
   from {
@@ -163,6 +192,7 @@ body #app main #api .item .extra {
   }
 }
 body #app main #api .item .extra p {
+  color: white;
   font-size: 2rem !important;
   margin: 1rem !important;
 }
