--- a/src/style/style.css
+++ b/src/style/style.css
@@ -39,8 +39,9 @@ body {
   background-color: white;
 }
 body #app header {
+  display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -51,9 +52,10 @@ body #app header h1 {
   color: rgb(197, 164, 120);
   font-size: 3.5rem;
   font-family: "abnes";
-  margin-top: 3rem;
+  margin-top: 2rem;
   margin-left: 4rem;
   margin-bottom: 1rem;
+  flex-basis: 50%;
 }
 body #app header .break {
   flex-basis: 0;
@@ -63,15 +65,12 @@ body #app header .pageIndicator {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 2rem;
-  margin-top: 2rem;
-  font-family: "Courier New", Courier, monospace;
 }
 body #app header .pageIndicator > p {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 body #app header .pageIndicator .fa-solid {
-  font-size: 5rem;
+  font-size: 4rem;
   cursor: pointer;
   color: rgb(197, 164, 120);
   font-family: FontAwesome !important;
@@ -82,8 +81,6 @@ body #app header .pageIndicator .pageNo {
   font-size: 3rem;
 }
 body #app header .search .wrap {
-  margin-top: 3rem;
-  margin-left: 1rem;
   display: inline-flex;
 }
 body #app header .search input {
@@ -112,6 +109,10 @@ body #app .divider {
 body #app main {
   display: flex;
   justify-content: center;
+  background-image: url("../assets/4320247.png");
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-size: 10rem;
 }
 body #app main #api {
   display: flex;
@@ -121,6 +122,7 @@ body #app main #api {
   max-width: 80vw;
   margin-top: 10rem;
   margin-bottom: 10rem;
+  background-color: white;
 }
 body #app main #api .item {
   display: flex;
@@ -134,9 +136,6 @@ body #app main #api .item {
   margin-right: 6rem;
   border: double 0.5rem rgb(197, 164, 120);
   outline: black 6px;
-}
-body #app main #api .item::hover {
-  border: 1px solid #eee;
 }
 body #app main #api .item > div {
   flex-basis: 50%;
@@ -162,24 +161,10 @@ body #app main #api .item .extra {
   z-index: 2;
   flex-direction: column;
   overflow: hidden;
-  overflow-y: scroll;
-  border-radius: 5%;
+  border-top-left-radius: 5%;
+  border-bottom-left-radius: 5%;
   animation-name: example;
   animation-duration: 1s;
-  /* width */
-  /* Track */
-  /* Handle */
-}
-body #app main #api .item .extra ::-webkit-scrollbar {
-  width: 20px;
-}
-body #app main #api .item .extra ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
-}
-body #app main #api .item .extra ::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 10px;
 }
 @keyframes example {
   from {
@@ -191,7 +176,12 @@ body #app main #api .item .extra ::-webkit-scrollbar-thumb {
     opacity: 1;
   }
 }
-body #app main #api .item .extra p {
+body #app main #api .item .extra u {
+  font-size: larger;
+  color: white;
+  text-decoration: none;
+}
+body #app main #api .item .extra > p {
   color: white;
   font-size: 2rem !important;
   margin: 1rem !important;
