--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -46,8 +46,9 @@ body{
     background-color: white;
     #app{
         header{
+            display:flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-around;
             align-items: center;
             display: flex;
             flex-direction: row;
@@ -57,9 +58,10 @@ body{
                 color: rgb(197, 164, 120);
                 font-size:3.5rem;
                 font-family: "abnes"; 
-                margin-top:3rem;
+                margin-top:2rem;
                 margin-left:4rem;
                 margin-bottom: 1rem;
+                flex-basis:50%;
             }
             .break{
                 flex-basis:0;
@@ -70,16 +72,13 @@ body{
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                margin-left:2rem;
-                margin-top: 2rem;
-                font-family: 'Courier New', Courier, monospace;
 
                 >p{
-                    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+                    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                 }
 
                 .fa-solid{
-                    font-size:5rem;
+                    font-size:4rem;
                     cursor: pointer;
                     color:rgb(197, 164, 120);
                     font-family: FontAwesome !important;
@@ -93,8 +92,6 @@ body{
             }
             .search{
                 .wrap{
-                    margin-top: 3rem;
-                    margin-left:1rem;
                     display: inline-flex;
                 }
 
@@ -125,6 +122,10 @@ body{
         main{
             display: flex;
             justify-content: center;
+            background-image: url("../assets/4320247.png");
+            background-repeat: repeat;
+            background-attachment: fixed;
+            background-size: 10rem;
             #api{
                 display: flex;
                 flex-direction: row;
@@ -133,6 +134,7 @@ body{
                 max-width:80vw;
                 margin-top: 10rem;
                 margin-bottom: 10rem;
+                background-color: white;
 
                 .item{
                     display: flex;
@@ -147,23 +149,19 @@ body{
                     border: double 0.5rem rgb(197, 164, 120);
                     outline:black 6px;
 
-                    &::hover{
-                        border: 1px solid #eee;
-                    }
-
                     >div{
                         flex-basis: 50%;
                         min-width: 50%;
                         max-width: 50%;
                         >img{
-                        margin-bottom: 1.5rem;
-                        cursor: pointer;
-                        min-width: 90%;
-                        max-width: 90%;
-                        position: relative;
-                        top:50%;
-                        left: 50%;
-                        transform: translate(-50%,-50%) ;
+                            margin-bottom: 1.5rem;
+                            cursor: pointer;
+                            min-width: 90%;
+                            max-width: 90%;
+                            position: relative;
+                            top:50%;
+                            left: 50%;
+                            transform: translate(-50%,-50%) ;
                         }
                     } 
                     
@@ -181,34 +179,24 @@ body{
                         -ms-flex-direction: column;
                         flex-direction: column;
                         overflow: hidden;
-                        overflow-y: scroll;
-                        border-radius: 5%;
+                        //overflow-y: scroll;
+                        border-top-left-radius: 5%;
+                        border-bottom-left-radius: 5%;
                         animation-name: example;
                         animation-duration: 1s;
-
-                        /* width */
-                        ::-webkit-scrollbar {
-                            width: 20px;
-                        }
-                        
-                        /* Track */
-                        ::-webkit-scrollbar-track {
-                            box-shadow: inset 0 0 5px grey;
-                            border-radius: 10px;
-                        }
-                        
-                        /* Handle */
-                        ::-webkit-scrollbar-thumb {
-                            background: red;
-                            border-radius: 10px;
-                        }
 
                         @keyframes example {
                             from {transform: translate(10%); opacity: 0}
                             to {transform: translate(0%); opacity: 1}
-                          }
+                        }
+                        
+                        u{
+                            font-size:larger;
+                            color:white;
+                            text-decoration: none;
+                        }
 
-                        p{    
+                        >p{    
                         color: white;                 
                         font-size: 2rem !important;
                         margin: 1rem !important;
