--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -100,7 +100,10 @@ body{
                     border-top-left-radius:3px;
                     border-bottom-left-radius:3px;
                     height:4rem;
-                    color: black;font-size: 3rem;
+                    color: black;
+                    font-size: 3rem;
+                    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                    padding-left:1rem;
                 }
                 button{
                     border: 3px solid rgb(197, 164, 120);
@@ -131,10 +134,16 @@ body{
                 flex-direction: row;
                 align-items: left;
                 flex-wrap: wrap;
+                justify-content: space-between;
                 max-width:80vw;
-                margin-top: 10rem;
-                margin-bottom: 10rem;
-                background-color: white;
+                //margin-top: 10rem;
+                padding-top: 10rem;
+                padding-bottom: 10rem;
+                //margin-bottom: 10rem;
+                background-color: rgb(255,255,255,0.1);
+                padding-left: 2rem;
+                padding-right: 2rem;
+                backdrop-filter: blur(6px);
 
                 .item{
                     display: flex;
@@ -145,7 +154,7 @@ body{
                     min-width: 60rem;
                     min-height: 45rem;
                     max-height: 42rem;
-                    margin-right: 6rem;
+                    //margin-right: 6rem;
                     border: double 0.5rem rgb(197, 164, 120);
                     outline:black 6px;
 
