--- a/src/style/style.css
+++ b/src/style/style.css
@@ -159,7 +159,9 @@ body #app main #api .item > title > img {
   transform: translate(-50%, -50%);
 }
 body #app main #api .item .extra {
-  background-color: rgb(143, 208, 202);
+  background-color: rgba(132, 199, 192, 0.95);
+  -webkit-backdrop-filter: blur(10rem);
+          backdrop-filter: blur(10rem);
   font-size: 3rem;
   margin: -0.1rem 0rem 0rem -30rem;
   max-width: 50%;
