--- a/src/style/style.css
+++ b/src/style/style.css
@@ -121,18 +121,19 @@ body #app main #api {
   flex-direction: row;
   align-items: left;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   max-width: 80vw;
   padding-top: 10rem;
   padding-bottom: 10rem;
   background-color: rgba(255, 255, 255, 0.1);
   padding-left: 2rem;
   padding-right: 2rem;
-  -webkit-backdrop-filter: blur(6px);
-          backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 body #app main #api .item {
   display: flex;
+  align-items: center;
   flex-direction: row;
   font-size: 3rem;
   max-width: 60rem;
@@ -142,13 +143,10 @@ body #app main #api .item {
   border: double 0.5rem rgb(197, 164, 120);
   outline: black 6px;
   margin-bottom: 6rem;
+  background-color: rgba(197, 164, 120, 0.3);
+  text-shadow: 1px 1px 1px black;
 }
-body #app main #api .item > title {
-  flex-basis: 50%;
-  min-width: 50%;
-  max-width: 50%;
-}
-body #app main #api .item > title > img {
+body #app main #api .item > img {
   margin-bottom: 1.5rem;
   cursor: pointer;
   min-width: 90%;
@@ -158,6 +156,11 @@ body #app main #api .item > title > img {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+body #app main #api .item > title {
+  flex-basis: 50%;
+  min-width: 50%;
+  max-width: 50%;
+}
 body #app main #api .item .extra {
   background-color: rgba(132, 199, 192, 0.95);
   -webkit-backdrop-filter: blur(10rem);
@@ -166,6 +169,7 @@ body #app main #api .item .extra {
   margin: -0.1rem 0rem 0rem -30rem;
   max-width: 50%;
   min-width: 50%;
+  min-height: 100%;
   z-index: 2;
   flex-direction: column;
   overflow: hidden;
@@ -212,10 +216,10 @@ body #app main #api .item .title {
 }
 body #app main #api .item .title h1 {
   text-decoration: underline;
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 body #app main #api .item .title p {
-  font-size: 1.8rem;
+  font-size: 2rem;
   text-decoration: none;
 }
 
