--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -144,6 +144,7 @@ body{
                 padding-left: 2rem;
                 padding-right: 2rem;
                 backdrop-filter: blur(1px);
+                column-gap: 2rem;
 
                 .item{
                     display: flex;
